--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,6 +16,7 @@ html(lang='en')
 
     body
       div.container
-        h1 Acme Cart
+        div.page-header
+          h1 Acme Cart
 
-    block content
+        block content
