still need to fix add and place

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,11 +40,11 @@ ul.list-group {
   margin-right: 10px;
 }
 
-.btn-danger {
+/*.btn-danger {
   background-color: #eee;
   color: #d9534f;
 }
-
+*/
 .btn-primary {
   background-color: #eee;
   color: #337ab7;
